# applications/osb-portal/src/apiclient/workspaces/models/index.ts
@@ -26,10 +26,6 @@ export * from './ResourceOrigin';
 export * from './ResourceStatus';
 export * from './ResourceType';
 export * from './Tag';
-export * from './UploadFinalizeRequest';
-export * from './UploadFinalizeResponse';
-export * from './UploadInitRequest';
-export * from './UploadInitResponse';
 export * from './UploadPart';
 export * from './UploadedPart';
 export * from './User';
@@ -47,3 +43,6 @@ export * from './WorkspaceResourceAllOf';
 export * from './WorkspaceResourceBase';
 export * from './WorkspaceResourceEntity';
 export * from './WorkspaceResourceEntityAllOf';
+export * from './WorkspaceRunRequest';
+export * from './WorkspaceRunResponse';
+export * from './WorkspaceRunStatus';
