# applications/workspaces/server/workspaces/models/__init__.py
@@ -49,7 +49,6 @@ from workspaces.models.biomodels_repository_resource import BiomodelsRepositoryR
 # IDP-43 DANDI upload (ported from the standalone idp-arc backend, 2026-09-14)
 from workspaces.models.upload_part import UploadPart
 from workspaces.models.uploaded_part import UploadedPart
-from workspaces.models.upload_init_request import UploadInitRequest
-from workspaces.models.upload_init_response import UploadInitResponse
-from workspaces.models.upload_finalize_request import UploadFinalizeRequest
-from workspaces.models.upload_finalize_response import UploadFinalizeResponse
+from workspaces.models.workspace_run_request import WorkspaceRunRequest
+from workspaces.models.workspace_run_response import WorkspaceRunResponse
+from workspaces.models.workspace_run_status import WorkspaceRunStatus
