# applications/workspaces/server/workspaces/models/upload_init_request.py
@@ -1,152 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from workspaces.models.base_model_ import Model
-from workspaces import util
-
-
-class UploadInitRequest(Model):
-    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
-
-    Do not edit the class manually.
-    """
-
-    def __init__(self, task_id=None, filename=None, size=None, dandi_etag=None):  # noqa: E501
-        """UploadInitRequest - a model defined in OpenAPI
-
-        :param task_id: The task_id of this UploadInitRequest.  # noqa: E501
-        :type task_id: str
-        :param filename: The filename of this UploadInitRequest.  # noqa: E501
-        :type filename: str
-        :param size: The size of this UploadInitRequest.  # noqa: E501
-        :type size: int
-        :param dandi_etag: The dandi_etag of this UploadInitRequest.  # noqa: E501
-        :type dandi_etag: str
-        """
-        self.openapi_types = {
-            'task_id': str,
-            'filename': str,
-            'size': int,
-            'dandi_etag': str
-        }
-
-        self.attribute_map = {
-            'task_id': 'task_id',
-            'filename': 'filename',
-            'size': 'size',
-            'dandi_etag': 'dandi_etag'
-        }
-
-        self._task_id = task_id
-        self._filename = filename
-        self._size = size
-        self._dandi_etag = dandi_etag
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'UploadInitRequest':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The UploadInitRequest of this UploadInitRequest.  # noqa: E501
-        :rtype: UploadInitRequest
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def task_id(self):
-        """Gets the task_id of this UploadInitRequest.
-
-        Slug of the selected protocol; becomes the first segment of the asset path.  # noqa: E501
-
-        :return: The task_id of this UploadInitRequest.
-        :rtype: str
-        """
-        return self._task_id
-
-    @task_id.setter
-    def task_id(self, task_id):
-        """Sets the task_id of this UploadInitRequest.
-
-        Slug of the selected protocol; becomes the first segment of the asset path.  # noqa: E501
-
-        :param task_id: The task_id of this UploadInitRequest.
-        :type task_id: str
-        """
-
-        self._task_id = task_id
-
-    @property
-    def filename(self):
-        """Gets the filename of this UploadInitRequest.
-
-
-        :return: The filename of this UploadInitRequest.
-        :rtype: str
-        """
-        return self._filename
-
-    @filename.setter
-    def filename(self, filename):
-        """Sets the filename of this UploadInitRequest.
-
-
-        :param filename: The filename of this UploadInitRequest.
-        :type filename: str
-        """
-        if filename is None:
-            raise ValueError("Invalid value for `filename`, must not be `None`")  # noqa: E501
-
-        self._filename = filename
-
-    @property
-    def size(self):
-        """Gets the size of this UploadInitRequest.
-
-
-        :return: The size of this UploadInitRequest.
-        :rtype: int
-        """
-        return self._size
-
-    @size.setter
-    def size(self, size):
-        """Sets the size of this UploadInitRequest.
-
-
-        :param size: The size of this UploadInitRequest.
-        :type size: int
-        """
-        if size is None:
-            raise ValueError("Invalid value for `size`, must not be `None`")  # noqa: E501
-
-        self._size = size
-
-    @property
-    def dandi_etag(self):
-        """Gets the dandi_etag of this UploadInitRequest.
-
-        S3-multipart digest in DANDI's format (32 hex chars, a dash, the part count), computed in the browser since the bytes never reach this server.  # noqa: E501
-
-        :return: The dandi_etag of this UploadInitRequest.
-        :rtype: str
-        """
-        return self._dandi_etag
-
-    @dandi_etag.setter
-    def dandi_etag(self, dandi_etag):
-        """Sets the dandi_etag of this UploadInitRequest.
-
-        S3-multipart digest in DANDI's format (32 hex chars, a dash, the part count), computed in the browser since the bytes never reach this server.  # noqa: E501
-
-        :param dandi_etag: The dandi_etag of this UploadInitRequest.
-        :type dandi_etag: str
-        """
-        if dandi_etag is None:
-            raise ValueError("Invalid value for `dandi_etag`, must not be `None`")  # noqa: E501
-
-        self._dandi_etag = dandi_etag
