# applications/workspaces/server/workspaces/models/upload_init_response.py
@@ -1,150 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from workspaces.models.base_model_ import Model
-from workspaces.models.upload_part import UploadPart
-from workspaces import util
-
-from workspaces.models.upload_part import UploadPart  # noqa: E501
-
-class UploadInitResponse(Model):
-    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
-
-    Do not edit the class manually.
-    """
-
-    def __init__(self, upload_id=None, path=None, parts=None, blob_id=None):  # noqa: E501
-        """UploadInitResponse - a model defined in OpenAPI
-
-        :param upload_id: The upload_id of this UploadInitResponse.  # noqa: E501
-        :type upload_id: str
-        :param path: The path of this UploadInitResponse.  # noqa: E501
-        :type path: str
-        :param parts: The parts of this UploadInitResponse.  # noqa: E501
-        :type parts: List[UploadPart]
-        :param blob_id: The blob_id of this UploadInitResponse.  # noqa: E501
-        :type blob_id: str
-        """
-        self.openapi_types = {
-            'upload_id': str,
-            'path': str,
-            'parts': List[UploadPart],
-            'blob_id': str
-        }
-
-        self.attribute_map = {
-            'upload_id': 'upload_id',
-            'path': 'path',
-            'parts': 'parts',
-            'blob_id': 'blob_id'
-        }
-
-        self._upload_id = upload_id
-        self._path = path
-        self._parts = parts
-        self._blob_id = blob_id
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'UploadInitResponse':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The UploadInitResponse of this UploadInitResponse.  # noqa: E501
-        :rtype: UploadInitResponse
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def upload_id(self):
-        """Gets the upload_id of this UploadInitResponse.
-
-        Absent when the content was already in the archive.  # noqa: E501
-
-        :return: The upload_id of this UploadInitResponse.
-        :rtype: str
-        """
-        return self._upload_id
-
-    @upload_id.setter
-    def upload_id(self, upload_id):
-        """Sets the upload_id of this UploadInitResponse.
-
-        Absent when the content was already in the archive.  # noqa: E501
-
-        :param upload_id: The upload_id of this UploadInitResponse.
-        :type upload_id: str
-        """
-
-        self._upload_id = upload_id
-
-    @property
-    def path(self):
-        """Gets the path of this UploadInitResponse.
-
-        Asset path derived server-side from the caller's identity.  # noqa: E501
-
-        :return: The path of this UploadInitResponse.
-        :rtype: str
-        """
-        return self._path
-
-    @path.setter
-    def path(self, path):
-        """Sets the path of this UploadInitResponse.
-
-        Asset path derived server-side from the caller's identity.  # noqa: E501
-
-        :param path: The path of this UploadInitResponse.
-        :type path: str
-        """
-
-        self._path = path
-
-    @property
-    def parts(self):
-        """Gets the parts of this UploadInitResponse.
-
-
-        :return: The parts of this UploadInitResponse.
-        :rtype: List[UploadPart]
-        """
-        return self._parts
-
-    @parts.setter
-    def parts(self, parts):
-        """Sets the parts of this UploadInitResponse.
-
-
-        :param parts: The parts of this UploadInitResponse.
-        :type parts: List[UploadPart]
-        """
-
-        self._parts = parts
-
-    @property
-    def blob_id(self):
-        """Gets the blob_id of this UploadInitResponse.
-
-        Set only on the deduplicated path.  # noqa: E501
-
-        :return: The blob_id of this UploadInitResponse.
-        :rtype: str
-        """
-        return self._blob_id
-
-    @blob_id.setter
-    def blob_id(self, blob_id):
-        """Sets the blob_id of this UploadInitResponse.
-
-        Set only on the deduplicated path.  # noqa: E501
-
-        :param blob_id: The blob_id of this UploadInitResponse.
-        :type blob_id: str
-        """
-
-        self._blob_id = blob_id
