# applications/workspaces/server/workspaces/models/workspace_run_response.py
@@ -1,0 +1,97 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from workspaces.models.base_model_ import Model
+from workspaces import util
+
+class WorkspaceRunResponse(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, workflow=None, output_dir=None):  # noqa: E501
+        """WorkspaceRunResponse - a model defined in OpenAPI
+
+        :param workflow: The workflow of this WorkspaceRunResponse.  # noqa: E501
+        :type workflow: str
+        :param output_dir: The output_dir of this WorkspaceRunResponse.  # noqa: E501
+        :type output_dir: str
+        """
+        self.openapi_types = {
+            'workflow': str,
+            'output_dir': str
+        }
+
+        self.attribute_map = {
+            'workflow': 'workflow',
+            'output_dir': 'output_dir'
+        }
+
+        self._workflow = workflow
+        self._output_dir = output_dir
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'WorkspaceRunResponse':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The WorkspaceRunResponse of this WorkspaceRunResponse.  # noqa: E501
+        :rtype: WorkspaceRunResponse
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def workflow(self):
+        """Gets the workflow of this WorkspaceRunResponse.
+
+        The run's id, for GET /workspace/{id}/run/{workflow}.  # noqa: E501
+
+        :return: The workflow of this WorkspaceRunResponse.
+        :rtype: str
+        """
+        return self._workflow
+
+    @workflow.setter
+    def workflow(self, workflow):
+        """Sets the workflow of this WorkspaceRunResponse.
+
+        The run's id, for GET /workspace/{id}/run/{workflow}.  # noqa: E501
+
+        :param workflow: The workflow of this WorkspaceRunResponse.
+        :type workflow: str
+        """
+        if workflow is None:
+            raise ValueError("Invalid value for `workflow`, must not be `None`")  # noqa: E501
+
+        self._workflow = workflow
+
+    @property
+    def output_dir(self):
+        """Gets the output_dir of this WorkspaceRunResponse.
+
+        This run's results folder on the volume.  # noqa: E501
+
+        :return: The output_dir of this WorkspaceRunResponse.
+        :rtype: str
+        """
+        return self._output_dir
+
+    @output_dir.setter
+    def output_dir(self, output_dir):
+        """Sets the output_dir of this WorkspaceRunResponse.
+
+        This run's results folder on the volume.  # noqa: E501
+
+        :param output_dir: The output_dir of this WorkspaceRunResponse.
+        :type output_dir: str
+        """
+        if output_dir is None:
+            raise ValueError("Invalid value for `output_dir`, must not be `None`")  # noqa: E501
+
+        self._output_dir = output_dir
