# applications/workspaces/server/workspaces/models/workspace_run_status.py
@@ -1,0 +1,127 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from workspaces.models.base_model_ import Model
+from workspaces import util
+
+class WorkspaceRunStatus(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, workflow=None, phase=None, message=None):  # noqa: E501
+        """WorkspaceRunStatus - a model defined in OpenAPI
+
+        :param workflow: The workflow of this WorkspaceRunStatus.  # noqa: E501
+        :type workflow: str
+        :param phase: The phase of this WorkspaceRunStatus.  # noqa: E501
+        :type phase: str
+        :param message: The message of this WorkspaceRunStatus.  # noqa: E501
+        :type message: str
+        """
+        self.openapi_types = {
+            'workflow': str,
+            'phase': str,
+            'message': str
+        }
+
+        self.attribute_map = {
+            'workflow': 'workflow',
+            'phase': 'phase',
+            'message': 'message'
+        }
+
+        self._workflow = workflow
+        self._phase = phase
+        self._message = message
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'WorkspaceRunStatus':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The WorkspaceRunStatus of this WorkspaceRunStatus.  # noqa: E501
+        :rtype: WorkspaceRunStatus
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def workflow(self):
+        """Gets the workflow of this WorkspaceRunStatus.
+
+
+        :return: The workflow of this WorkspaceRunStatus.
+        :rtype: str
+        """
+        return self._workflow
+
+    @workflow.setter
+    def workflow(self, workflow):
+        """Sets the workflow of this WorkspaceRunStatus.
+
+
+        :param workflow: The workflow of this WorkspaceRunStatus.
+        :type workflow: str
+        """
+        if workflow is None:
+            raise ValueError("Invalid value for `workflow`, must not be `None`")  # noqa: E501
+
+        self._workflow = workflow
+
+    @property
+    def phase(self):
+        """Gets the phase of this WorkspaceRunStatus.
+
+
+        :return: The phase of this WorkspaceRunStatus.
+        :rtype: str
+        """
+        return self._phase
+
+    @phase.setter
+    def phase(self, phase):
+        """Sets the phase of this WorkspaceRunStatus.
+
+
+        :param phase: The phase of this WorkspaceRunStatus.
+        :type phase: str
+        """
+        if phase is None:
+            raise ValueError("Invalid value for `phase`, must not be `None`")  # noqa: E501
+        allowed_values = ['Pending', 'Running', 'Succeeded', 'Failed']  # noqa: E501
+        if phase not in allowed_values:
+            raise ValueError(
+                "Invalid value for `phase` ({0}), must be one of {1}"
+                .format(phase, allowed_values)
+            )
+
+        self._phase = phase
+
+    @property
+    def message(self):
+        """Gets the message of this WorkspaceRunStatus.
+
+        Why it failed (e.g. which notebook), or Argo's message.  # noqa: E501
+
+        :return: The message of this WorkspaceRunStatus.
+        :rtype: str
+        """
+        return self._message
+
+    @message.setter
+    def message(self, message):
+        """Sets the message of this WorkspaceRunStatus.
+
+        Why it failed (e.g. which notebook), or Argo's message.  # noqa: E501
+
+        :param message: The message of this WorkspaceRunStatus.
+        :type message: str
+        """
+
+        self._message = message
